// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource component snaps renderers should render a Resource with CERTIFIED flag 1`] = `
<div
  aria-label="Title with few actions"
  aria-posinset={1}
  className="resource-item theme-resource-item theme-center"
  role="listitem"
  tabIndex="0"
>
  <React.Fragment>
    <Memo(Icon)
      className="theme-icon"
      name="talend-file-xls-o"
    />
    <div
      className="data-container theme-data-container"
    >
      <span
        className="title theme-title"
      >
        Title with few actions
      </span>
      <small
        className="author theme-author"
      >
        owned by Jean-Pierre DUPONT, over 2 years ago
      </small>
    </div>
    <div
      className="flags-container theme-flags-container"
    >
      <Memo(Icon)
        className="theme-flag theme-visible"
        name="talend-badge"
      />
      <Memo(Icon)
        className="theme-flag"
        name="talend-star"
      />
    </div>
  </React.Fragment>
</div>
`;

exports[`Resource component snaps renderers should render a Resource with FAVORITE flag 1`] = `
<div
  aria-label="Title with few actions"
  aria-posinset={1}
  className="resource-item theme-resource-item theme-center"
  role="listitem"
  tabIndex="0"
>
  <React.Fragment>
    <Memo(Icon)
      className="theme-icon"
      name="talend-file-xls-o"
    />
    <div
      className="data-container theme-data-container"
    >
      <span
        className="title theme-title"
      >
        Title with few actions
      </span>
      <small
        className="author theme-author"
      >
        owned by Jean-Pierre DUPONT, over 2 years ago
      </small>
    </div>
    <div
      className="flags-container theme-flags-container"
    >
      <Memo(Icon)
        className="theme-flag"
        name="talend-badge"
      />
      <Memo(Icon)
        className="theme-flag theme-visible"
        name="talend-star"
      />
    </div>
  </React.Fragment>
</div>
`;

exports[`Resource component snaps renderers should render a Resource with both CERTIFIED and FAVORITE flags 1`] = `
<div
  aria-label="Title with few actions"
  aria-posinset={1}
  className="resource-item theme-resource-item theme-center"
  role="listitem"
  tabIndex="0"
>
  <React.Fragment>
    <Memo(Icon)
      className="theme-icon"
      name="talend-file-xls-o"
    />
    <div
      className="data-container theme-data-container"
    >
      <span
        className="title theme-title"
      >
        Title with few actions
      </span>
      <small
        className="author theme-author"
      >
        owned by Jean-Pierre DUPONT, over 2 years ago
      </small>
    </div>
    <div
      className="flags-container theme-flags-container"
    >
      <Memo(Icon)
        className="theme-flag theme-visible"
        name="talend-badge"
      />
      <Memo(Icon)
        className="theme-flag theme-visible"
        name="talend-star"
      />
    </div>
  </React.Fragment>
</div>
`;

exports[`Resource component snaps renderers should render a Resource with just a title/subtitle/flags 1`] = `
<div
  aria-label="Title with few actions"
  aria-posinset={1}
  className="resource-item theme-resource-item theme-center"
  role="listitem"
  tabIndex="0"
>
  <React.Fragment>
    <Memo(Icon)
      className="theme-icon"
      name="talend-file-xls-o"
    />
    <div
      className="data-container theme-data-container"
    >
      <span
        className="title theme-title"
      >
        Title with few actions
      </span>
      <small
        className="subtitle theme-subtitle"
        title="Loreum lopsum"
      >
        Loreum lopsum
      </small>
    </div>
    <div
      className="flags-container theme-flags-container"
    >
      <Memo(Icon)
        className="theme-flag"
        name="talend-badge"
      />
      <Memo(Icon)
        className="theme-flag"
        name="talend-star"
      />
    </div>
  </React.Fragment>
</div>
`;

exports[`Resource component snaps renderers should render a Resource without icon 1`] = `
<div
  aria-label="Title with few actions"
  aria-posinset={1}
  className="resource-item theme-resource-item theme-center"
  role="listitem"
  tabIndex="0"
>
  <React.Fragment>
    <div
      className="data-container theme-data-container"
    >
      <span
        className="title theme-title"
      >
        Title with few actions
      </span>
      <small
        className="author theme-author"
      >
        owned by Jean-Pierre DUPONT, over 2 years ago
      </small>
    </div>
    <div
      className="flags-container theme-flags-container"
    >
      <Memo(Icon)
        className="theme-flag"
        name="talend-badge"
      />
      <Memo(Icon)
        className="theme-flag"
        name="talend-star"
      />
    </div>
  </React.Fragment>
</div>
`;

exports[`Resource component snaps renderers should render a regular Resource 1`] = `
<div
  aria-label="Title with few actions"
  aria-posinset={1}
  className="resource-item theme-resource-item theme-center"
  role="listitem"
  tabIndex="0"
>
  <React.Fragment>
    <Memo(Icon)
      className="theme-icon"
      name="talend-file-xls-o"
    />
    <div
      className="data-container theme-data-container"
    >
      <span
        className="title theme-title"
      >
        Title with few actions
      </span>
      <small
        className="author theme-author"
      >
        owned by Jean-Pierre DUPONT, over 2 years ago
      </small>
    </div>
    <div
      className="flags-container theme-flags-container"
    >
      <Memo(Icon)
        className="theme-flag"
        name="talend-badge"
      />
      <Memo(Icon)
        className="theme-flag"
        name="talend-star"
      />
    </div>
  </React.Fragment>
</div>
`;

exports[`Resource component snaps renderers should render an empty Resource 1`] = `null`;
